# dropsort

./: LICENSE  PUBLISHING.md  README.md
core/: pyproject.toml
core/src/ailocaltools/: bridge.py  cli.py  history.py  models.py  organizer.py
core/tests/: test_bridge.py  test_history.py  test_organizer.py  test_release_scripts.py
release/: README.md  build_app.sh  package_dmg.sh  prepare_github_release.sh  sign_app.sh
scripts/: public_release_check.sh
shell/Sources/AppleLocalOrganizerApp/: AppDelegate.swift  AppModels.swift  AppState.swift  AppleLocalOrganizerApp.swift  DirectoryEventStream.swift  PythonBridge.swift  TextServiceProvider.swift  Views.swift  WindowAccessor.swift
